Fix modal going off-screen.

--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,5 +1,5 @@
 .modal-container {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     padding: 10px;
@@ -14,7 +14,7 @@
 }
 .modal-container::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     padding: 10px;
